--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "https://erin-m-keller.github.io",
+  "homepage": "https://erin-m-keller.github.io/keller-portfolio/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
